# simple-dialect

./: CMakeLists.txt  LICENSE  README.md  Simple.h  SimpleBase.td  SimpleDialect.cpp  SimpleOps.h  SimpleOps.td
